--- a/instagram/src/App.scss
+++ b/instagram/src/App.scss
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
-  width: 600px;
+  width: 100%;
+  max-width: 600px;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
