--- a/instagram/src/components/Comment/_Comment.scss
+++ b/instagram/src/components/Comment/_Comment.scss
@@ -1,6 +1,7 @@
 .comment {
     font-weight: 500;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
+    padding: 0 10px;
 }
 .comment > span {
     font-weight: 700;
