--- a/instagram/src/components/PostContainer/_PostContainer.scss
+++ b/instagram/src/components/PostContainer/_PostContainer.scss
@@ -12,6 +12,7 @@
     flex-direction: row;
     align-items: center;
     height: 60px;
+    padding: 0 10px;
 }
 
 .postContainer > header > img {
@@ -38,8 +39,8 @@
 }
 
 .actions > img {
-    height: auto;
-    width: 4rem;
+    height: 26px;
+    width: auto;
     padding-right: 10px;
 }
 
@@ -54,9 +55,9 @@
 }
 
 .likes > p {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     padding-left: 15px;
-    font-weight: 500;
+    font-weight: 700;
 }
 
 .postContainer > input {
