--- a/instagram/src/components/PostContainer/_PostContainer.scss
+++ b/instagram/src/components/PostContainer/_PostContainer.scss
@@ -28,6 +28,10 @@
     margin-left: 10px;
 }
 
+.postContainer > header > h3:hover {
+    cursor: pointer;
+}
+
 .actions {
     width: 100%;
     display: flex;
@@ -42,6 +46,9 @@
     height: 26px;
     width: auto;
     padding-right: 10px;
+}
+.actions > img:hover {
+    cursor: pointer;
 }
 
 .likes {
