--- a/instagram/src/components/CommentSection/_CommentSection.scss
+++ b/instagram/src/components/CommentSection/_CommentSection.scss
@@ -4,3 +4,12 @@
     text-align: left;
     font-size: 1.6rem;
 }
+
+input {
+    width: 100%;
+    max-width: 100%;
+    height: 60px;
+    margin-top: 10px;
+    font-size: 1.6rem;
+    border: 0 px solid black;
+}
