Updated background colors for searchbar and postcontainer

--- a/instagram/src/components/SearchBar/_SearchBar.scss
+++ b/instagram/src/components/SearchBar/_SearchBar.scss
@@ -8,6 +8,7 @@
     margin-top: 10px;
     border-bottom: 1px solid silver;
     padding: 0 10px;
+    background-color: white;
 
 
     .searchBar_logos, .searchBar_icons {
