--- a/instagram/src/components/PostContainer/_PostContainer.scss
+++ b/instagram/src/components/PostContainer/_PostContainer.scss
@@ -2,6 +2,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    background-color: white;
 }
 .postContainer > img {
     width: 100%;
