Added background color to input fields in login screen

--- a/instagram/src/components/Login/Login.scss
+++ b/instagram/src/components/Login/Login.scss
@@ -36,7 +36,8 @@
             border-radius: 15px;
             -webkit-box-shadow: 0 8px 6px -6px black;
 	   -moz-box-shadow: 0 8px 6px -6px black;
-	        box-shadow: 0 8px 6px -6px black;
+            box-shadow: 0 8px 6px -6px black;
+            border: .5px solid gray;
         }
         input:focus {
             border: .5px solid gray;
